# libprepay

./: .gitignore  CMakeLists.txt  README.md  build.sh  pyproject.toml
include/prepay/: prepay.h
python/: CMakeLists.txt  ext.cpp
python/prepay/: __init__.py
src/: engine.cpp  engine.hpp  error.hpp  model.cpp  model.hpp  prepay_abi.cpp  prepay_error.cpp  prepay_version.cpp
tests/: conftest.py  smoke.c  test_psa.py  test_smoke.py
